feat: add appsettings e refact create

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RandomCodeLenght": 5,
+  "ExpirationDate": 24
 }
